Closed Bug 1824323 Opened 1 year ago Closed 1 year ago

Date input picker does not update when opened with showPicker()

Categories

(Core :: DOM: Forms, defect)

Firefox 112
defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox113 --- fixed

People

(Reporter: mikk36, Assigned: evilpie)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/112.0

Steps to reproduce:

Open https://show-picker.glitch.me/demo.html
Adjust a date input field value with arrows to a valid date
Click on "Show picker"

Actual results:

Picker opens and displays current day (today)

Expected results:

Picker opens and displays selected date of the input field

Alternatively, open https://jsbin.com/kosoxom
Hit "set value" and then "open picker".
Picker should show 10th of March, 2023 as selected date, but instead shows no date as selected.
When clicking the little picker icon inside the field, the picker opens with a correct date selected.
Now when clicking on "open picker" again, it shows the correct date as selected until you change it from outside the picker again.

Blocks: 1745005
Component: Untriaged → DOM: Core & HTML
Product: Firefox → Core
Component: DOM: Core & HTML → DOM: Forms

Confirmed.

evilpie, can you, please, take a look?

Severity: -- → S3
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(evilpies)
Assignee: nobody → evilpies
Status: NEW → ASSIGNED
Flags: needinfo?(evilpies)
Pushed by evilpies@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/a0f81996eefd
Open picker from datetimebox to get current date/time value. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
Regressed by: 1853797
No longer regressed by: 1853797
Regressions: 1853797
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: