Bug 1824323 - Open picker from datetimebox to get current date/time value. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D173959